<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#efefef"
              android:gravity="center"
              android:orientation="vertical"
    >

    <Button
        android:id="@+id/translate_button_select_origin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/translate_button_select_origin"
        android:textColor="#ff405958"
        android:textSize="17sp"
        android:textStyle="normal"
        />

    <EditText
        android:id="@+id/translate_edit_text_origin"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/edittext"
        android:hint="@string/translate_edit_text_origin"
        android:paddingLeft="5dp"
        android:textColor="#ff405958"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <Button
        android:id="@+id/translate_button_translate"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/translate_button_translate"
        android:textColor="#ff405958"
        android:textSize="20sp"
        android:textStyle="normal"
        />

    <Button
        android:id="@+id/translate_button_select_dest"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/translate_button_select_dest"
        android:textColor="#ff405958"
        android:textSize="17sp"
        android:textStyle="normal"
        />

    <EditText
        android:id="@+id/translate_edit_text_dest"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/edittext"
        android:hint="@string/translate_edit_text_dest"
        android:inputType="none"
        android:paddingLeft="5dp"
        android:textColor="#ff405958"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <ProgressBar
        android:id="@+id/translate_progress_bar_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        />

</LinearLayout>