<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#efefef"
              android:gravity="center"
              android:orientation="vertical"
    >

    <EditText
        android:id="@+id/determine_edit_text_src"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/edittext_determine"
        android:hint="@string/determine_edit_text_src"
        android:paddingLeft="5dp"
        android:textColor="#ff405958"
        android:textSize="16sp"
        android:textStyle="normal"
        />

    <Button
        android:id="@+id/determine_button_determine"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/determine_button_determine"
        android:textColor="#ff405958"
        android:textSize="20sp"
        android:textStyle="normal"
        />

    <EditText
        android:id="@+id/determine_edit_text_dest"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/determine_edit_text_dest"
        android:paddingLeft="5dp"
        android:textColor="#ff405958"
        android:textSize="24sp"
        android:textStyle="normal"
        />

    <Button
        android:id="@+id/determine_button_to_translate"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/translate"
        android:gravity="center"
        android:text=""
        android:textColor="#ff405958"
        android:textSize="20sp"
        android:textStyle="normal"
        />

    <ProgressBar
        android:id="@+id/determine_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        />

</LinearLayout>